...
        android:title="Indonesia" />
    <item android:id="@+id/IE"
        android:title="Ireland" />
    <item android:id="@+id/IL"
        android:title="Israel" />
    <item android:id="@+id/IN"
        android:title="India" />
    <item android:id="@+id/IQ"
        android:title="Iraq" />
    <item android:id="@+id/IR"
        android:title="Iran" />
    <item android:id="@+id/IS"
        android:title="Iceland" />
    <item android:id="@+id/IT"
        android:title="Italy" />
    <item android:id="@+id/JM"
        android:title="Jamaica" />
    <item android:id="@+id/JO"
        android:title="Jordan" />
    <item android:id="@+id/JP"
        android:title="Japan" />
...
