<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_nav_graph"
    app:startDestination="@id/loginFragment">
    <fragment
        android:id="@+id/loginFragment"
        android:name="it.sal.disco.unimib.charityhub.ui.welcome.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registrationFragment"
            app:destination="@id/registrationFragment" />
        <action
            android:id="@+id/action_loginFragment_to_mainActivity"
            app:destination="@id/mainActivity" />
    </fragment>
    <fragment
        android:id="@+id/registrationFragment"
        android:name="it.sal.disco.unimib.charityhub.ui.welcome.RegistrationFragment"
        android:label="fragment_registration"
        tools:layout="@layout/fragment_registration" >
        <action
            android:id="@+id/action_registrationFragment_to_mainActivity"
            app:destination="@id/mainActivity" />
        <action
            android:id="@+id/action_registrationFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <activity
        android:id="@+id/mainActivity"
        android:name="it.sal.disco.unimib.charityhub.ui.main.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />
</navigation>